# DataScienceFolder

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  dev.ipynb  documentation.txt  install_precommit_and_create_env.py  main.py  pyproject.toml  readme.pptx  setup.py
.github/workflows/: pre-commit.yml
dspackagefolder/: __init__.py  install_precommit_and_create_env.py  main.py
dspackagefolder/.github/workflows/: pre-commit.yml
dspackagefolder/template/: .gitignore  README.md  dev.ipynb  main.py  requirements.txt
dspackagefolder/template/.config/: example.toml
dspackagefolder/template/checklist/: GENERIC_CHECKLIST.xlsx  ML_CHECKLIST.xlsx  STATISTICS_CHECKLIST.xlsx
dspackagefolder/template/logs/: .gitkeep
dspackagefolder/template/src/: sqlcrud.py
dspackagefolder/template/src/utils/: config_loader.py  env_loader.py  logging_config.py
