[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "datascience_folder_structure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "path>=17.1.1",
    "toml>=0.10.2",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
dspackagefolder = ["template/**"]


[project.scripts]
createdatasciencefolder = "dspackagefolder.main:create_ds_folder_cli"
