[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "datascience_folder_structure"
version = "0.1.3.12"  ## Update this version number as needed
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "path>=17.1.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.48",
    "toml>=0.10.2",
]

[tool.setuptools.packages.find]
where = ["."]



[project.scripts]
createdatasciencefolder = "dspackagefolder.main:create_ds_folder_cli"#

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
dspackagefolder = [
    "template/**/*",
    "template/**",
    "template/**/.*",
    "template/.*/.*",
    "template/.*/*"
]
